# rosetta-mail

./: Cargo.toml  README.md  build.rs
proto/: tunnel.proto
src/: lib.rs
src/client/: config.rs  connection.rs  connections.rs  handler.rs  init.rs  logging.rs  mod.rs  storage.rs
src/client/dns/: cloudflare.rs  mod.rs  records.rs
src/client/http/: handler.rs  mod.rs  mta_sts.rs
src/client/imap/: command.rs  mod.rs  response.rs  session.rs
src/client/smtp/: command.rs  mailer.rs  mod.rs  outbound.rs  outbox.rs  response.rs  security.rs  sender.rs  session.rs  transaction.rs
src/client/tls/: acme.rs  certificate.rs  dane.rs  dkim.rs  mod.rs  session.rs
src/server/: config.rs  mod.rs  tcp.rs  types.rs  websocket.rs
